--- a/stylesheet.css
+++ b/stylesheet.css
@@ -47,12 +47,21 @@ p {
 }
 
 
+.date-table p {
+  margin: 1px;
+}
+
+.date-table {
+  margin-bottom: 70px;
+}
+
+
 .video {
   border: 4px solid #000000;
   width: 630px;
   height: 440px;
   margin-top: 40px;
-  margin-bottom: 140px;
+  margin-bottom: 70px;
   position: relative;
 }
 
