--- a/stylesheet.css
+++ b/stylesheet.css
@@ -65,7 +65,14 @@ p {
 
 td {
   margin: 0px;
-  padding-left: 6px;
+  padding-right: 0px;
+  padding-top: 0px;
+  padding-bottom: 0px;
+  padding-left: 0px;
+}
+
+.eventTitle {
+  padding-left: 12px;
 }
 
 tr {
