--- a/stylesheet.css
+++ b/stylesheet.css
@@ -52,6 +52,7 @@ p {
 
 .social-link {
   margin-bottom: 80px;
+  margin-top: 80px;
 }
 
 .date-table p {
@@ -79,6 +80,15 @@ tr {
   padding-left: 20px;
 }
 
+.cassetteImage {
+  width: 100%;
+  padding-bottom: 20px;
+}
+
+hr {
+  margin-top: 70px;
+  margin-bottom: 70px;
+}
 
 .video {
   border: 4px solid #000000;
